# avaliador

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
avaliador/: utilitarios.py
docs/: index.md
docs/api/: utilitários.md
docs/stylesheets/: extra.css
site/: 404.html  index.html  objects.inv
site/api/utilitários/: index.html
